# PolarRoute-server

./: .gitignore  .pre-commit-config.yaml  .pytest.ini  404.html  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  README.md  compose.yml  demo.py  docker-entrypoint.sh  entrypoint.sh  env.example  index.html  manage.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.dev.txt  requirements.txt  ruff.toml  schema.yml  search.html
.github/workflows/: docs.yml  tests.yml
api/: apischema.yml  index.html
assets/: mapFunctions.js
autoapi/polarrouteserver/: index.html
autoapi/polarrouteserver/demo/: index.html
autoapi/polarrouteserver/route_api/: index.html
autoapi/polarrouteserver/route_api/models/: index.html
autoapi/polarrouteserver/route_api/responses/: index.html
autoapi/polarrouteserver/route_api/serializers/: index.html
autoapi/polarrouteserver/route_api/tasks/: index.html
autoapi/polarrouteserver/route_api/utils/: index.html
autoapi/polarrouteserver/route_api/views/: index.html
autoapi/polarrouteserver/utils/: index.html
autoapi/polarrouteserver/utils/loggers/: index.html
autoapi/polarrouteserver/version/: index.html
autoapi/request_route/: index.html
autoapi/request_route/request_route/: index.html
autoapi/summary/: index.html
changelog/: index.html
config/: template.yaml
configuration/: index.html
deployment/: index.html
development/: index.html
docs/: api.md  apischema.yml  changelog.md  configuration.md  deployment.md  development.md  how-polarroute-server-works.md  index.md  requesting-routes.md  vehicle-management.md
getting-started/: index.html
how-polarroute-server-works/: index.html
martin/: config.yaml
martin/style/: mesh.json
polarrouteserver/: __init__.py  asgi.py  celery.py  dash.py  demo.py  frontend.py  settings.py  urls.py  version.py  wsgi.py
polarrouteserver/frontend/: __init__.py  callbacks.py  components.py  layouts.py  utils.py
polarrouteserver/route_api/: __init__.py  admin.py  apps.py  context_processors.py  models.py  responses.py  serializers.py  signals.py  tasks.py  utils.py  vector_layers.py  views.py
polarrouteserver/route_api/fixtures/: locations_bas.json  vehicles.json
polarrouteserver/route_api/management/commands/: ensure_adminuser.py  insert_mesh.py
polarrouteserver/route_api/migrations/: 0004_remove_route_file.py  0006_alter_route_end_name_alter_route_start_name.py  0008_mesh_valid_date_end_mesh_valid_date_start.py  0009_alter_job_route_alter_route_mesh.py  0010_alter_mesh_options.py  0011_alter_mesh_name.py  0012_mesh__geom.py  0012_vehicle.py  0013_location.py  0013_refactor_mesh_models.py  0014_add_vehicle_to_route.py  0014_alter_job_route.py  0014_refactor_mesh_models.py  0015_add_vehicle_to_route.py  0015_alter_location_name.py  0016_alter_job_route.py  0016_alter_location_name.py  0017_add_route_tag.py  0017_alter_location_name.py  0017_mesh_geometry.py  0018_alter_job_route.py  0018_remove_mesh_geometry_meshpolygon.py  0018_remove_route_tag_route_tags.py
polarrouteserver/route_api/templates/: index.html
polarrouteserver/route_api/tests/: test_tasks.py  test_utils.py  test_views.py  utils.py
polarrouteserver/settings/: base.py  development.py  production.py  staging.py  test.py
polarrouteserver/utils/: loggers.py  logging.py
postgis-init-scripts/: 01_functions.sql
request_route/: request_route.py
requesting-routes/: index.html
route_api/: apps.py  models.py  serializers.py  tasks.py  tests.py  utils.py  views.py
route_api/management/commands/: insert_mesh.py
route_api/migrations/: 0001_initial.py  0002_alter_mesh_id_alter_route_id.py  0002_alter_route_info.py  0002_job.py  0002_remove_mesh_calculated_remove_mesh_file_and_more.py  0002_rename_status_mesh_info_rename_status_route_info.py  0003_alter_job_datetime.py  0003_mesh_name.py  0003_route_end_name_route_start_name.py  0003_route_json_unsmoothed.py  0004_rename_waypoint_end_lat_route_end_lat_and_more.py  0005_alter_route_end_name_alter_route_start_name.py  0005_remove_job_status_route_json_alter_mesh_requested_and_more.py  0006_mesh_meshiphi_version_route_polar_route_version.py  0007_alter_route_end_name_alter_route_start_name.py  0007_remove_job_mesh_remove_job_route_mesh_job_route_job.py
route_api/tests/: conftest.py  test_tasks.py  test_utils.py  test_views.py  utils.py
route_api/tests/fixtures/: test_vessel_mesh.json
search/: search_index.json
tests/: test_commands.py  test_models.py  test_responses.py  test_serializers.py  test_tasks.py  test_utils.py  test_views.py  utils.py
tests/fixtures/: test_env_mesh.json  test_route.json  test_route_out_of_mesh.json  test_vessel_config.json  test_vessel_mesh.json
vehicle-management/: index.html
